# generate

./: CMakeLists.txt  README.md  conanfile.txt
include/: channel.hpp  generator.hpp  task.hpp
test/: CMakeLists.txt  test_channel_complex.cpp  test_channel_lambda.cpp  test_channel_variant.cpp  test_generate.cpp  test_task.cpp
